tests/errors/semantic/blocking/INHOMOG_LIST.py
# pylint: disable=missing-function-docstring, missing-module-docstring
x = [2,"two"]
print(x)
